@@ -9,7 +9,7 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = List.of("k1/sk1");
+        List<String> input = Arrays.asList("k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -17,7 +17,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = List.of("k1", "k1/sk1");
+        List<String> input = Arrays.asList("k1", "k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -25,7 +25,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissedTwo() {
-        List<String> input = List.of("k1/sk1/ssk1");
+        List<String> input = Arrays.asList("k1/sk1/ssk1");
         List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -33,7 +33,7 @@ public class DepartmentsTest {
 
     @Test
     public void departmentsortAsc() {
-        List<String> input = List.of("k1/sk1/ssk1", "k1", "k1/sk1");
+        List<String> input = Arrays.asList("k1/sk1/ssk1", "k1", "k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
@@ -41,7 +41,7 @@ public class DepartmentsTest {
 
     @Test
     public void departmentsortDesc() {
-        List<String> input = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk2");
+        List<String> input = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk2");
         List<String> expect = List.of("k2", "k2/sk2", "k1", "k1/sk1", "k1/sk1/ssk1");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
